--- a/templates/index_이제욱.html
+++ b/templates/index_이제욱.html
@@ -124,7 +124,7 @@
                     <div class="card-body">
                         <blockquote class="blockquote mb-0">
                             <div class="btn-text-right">
-                                <button type="button" onclick="deleteRow(this);" class="btn btn-light">✖️</button>
+                                <button type="button" class="btn btn-light">✖️</button>
                             </div>
                             <p>qqqqqqqqqqqqqqqqqqqq</p>
                             <footer class="blockquote-footer">dsadasdwfwfa</footer>
