--- a/templates/index_김정규.html
+++ b/templates/index_김정규.html
@@ -65,7 +65,7 @@
         }
 
         .shortcut-links a img {
-            width: 70px;
+            width:80px;
             margin-right: 20px;
         }
 
@@ -83,7 +83,7 @@
             margin: 20px auto 0px auto;
             padding: 10px;
             box-shadow: 0px 0px 3px 0px gray;
-
+            margin-bottom: 20px;
             display: none;
         }
     </style>
@@ -123,6 +123,7 @@
                     <label for="floatingTextarea2">부가 설명</label>
                 </div>
             </div>
+
             <div class="mycards" id="comment-list">
                 <div class="card">
                     <div class="card-body">
@@ -150,17 +151,16 @@
         </div>
         <div class="sidebar">
             <div class="shortcut-links">
-                </a>
-                <a onclick="open_box()"><img src="../static/images/gray-circle.png">
+                <a onclick="open_box()"><img src="../static/images/create.png">
                     <p>Create</p>
                 </a>
-                <a onclick="close_box()" type="button"><img src="../static/images/gray-circle.png">
+                <a onclick="close_box()" type="button"><img src="../static/images/cancel.png">
                     <p>Cancel</p>
                 </a>
-                <a onclick="save_detail()" type="button"><img src="../static/images/gray-circle.png">
+                <a onclick="save_detail()" type="button"><img src="../static/images/Add.png">
                     <p>Add</p>
                 </a>
-                <a href="/"><img src="../static/images/gray-circle.png">
+                <a href="/"><img src="../static/images/Home.png">
                     <p>Home</p>
                 </a>
             </div>
