--- a/templates/index_이제욱.html
+++ b/templates/index_이제욱.html
@@ -65,7 +65,7 @@
         }
 
         .shortcut-links a img {
-            width: 70px;
+            width: 80px;
             margin-right: 20px;
         }
 
@@ -84,9 +84,10 @@
             margin: 20px auto 0px auto;
             padding: 10px;
             box-shadow: 0px 0px 3px 0px gray;
-
+            margin-bottom: 20px;
             display: none;
         }
+
     </style>
     <script>
         function save_detail() {
@@ -118,12 +119,12 @@
                     <input id="url" type="email" class="form-control" placeholder="name@example.com">
                     <label>추가 사항</label>
                 </div>
-
                 <div class="form-floating">
                     <textarea id="comment" class="form-control" placeholder="Leave a comment here"></textarea>
                     <label for="floatingTextarea2">부가 설명</label>
                 </div>
             </div>
+
             <div class="mycards" id="comment-list">
                 <div class="card">
                     <div class="card-body">
@@ -151,16 +152,16 @@
         </div>
         <div class="sidebar">
             <div class="shortcut-links">
-                <a onclick="open_box()"><img src="../static/images/gray-circle.png">
+                <a onclick="open_box()"><img src="../static/images/create.png">
                     <p>Create</p>
                 </a>
-                <a onclick="close_box()" type="button"><img src="../static/images/gray-circle.png">
+                <a onclick="close_box()" type="button"><img src="../static/images/cancel.png">
                     <p>Cancel</p>
                 </a>
-                <a onclick="posting()" type="button"><img src="../static/images/gray-circle.png">
+                <a onclick="save_detail()" type="button"><img src="../static/images/Add.png">
                     <p>Add</p>
                 </a>
-                <a href="/"><img src="../static/images/gray-circle.png">
+                <a href="/"><img src="../static/images/Home.png">
                     <p>Home</p>
                 </a>
             </div>
