한글로수정

--- a/templates/index_김정규.html
+++ b/templates/index_김정규.html
@@ -184,8 +184,8 @@
                     <label>부가 설명</label>
                 </div>
                 <div class="btnbox">
-                    <button onclick="close_box()" type="button" class="btn btn-outline-dark">CANCEL</button>
-                    <button onclick="save_detail()" type="button" class="btn btn-dark"> ADD </button>
+                    <button onclick="close_box()" type="button" class="btn btn-outline-dark"> 닫기 </button>
+                    <button onclick="save_detail()" type="button" class="btn btn-dark"> 추가 </button>
                 </div>
             </div>
 
@@ -196,13 +196,13 @@
             <div class="shortcut-links">
                 <!-- update 버튼 추가 -->
                 <a data-bs-toggle="modal" data-bs-target="#staticBackdrop"><img src="../static/images/update.png">
-                    <p>Update</p>
+                    <p>수정하기</p>
                 </a>
                 <a onclick="open_box()"><img src="../static/images/create.png">
-                    <p>Create</p>
+                    <p>새로 만들기</p>
                 </a>
                 <a href="/"><img src="../static/images/Home.png">
-                    <p>Home</p>
+                    <p>처음으로</p>
                 </a>
             </div>
         </div>
