--- a/templates/index_list.html
+++ b/templates/index_list.html
@@ -136,10 +136,10 @@
                     <blockquote class="blockquote mb-0">
                         <button type="button" onclick="window.location.href='/index_이솔.html'"
                             class="btn btn-light">▶️</button>
-                        <img src="../static/images/Jack.png" class="user-icon">
+                        <img src="../static/images/oreo3.jpeg" class="user-icon">
                         <!-- 이미지1:1 비율로 올리기 -->
                         <p>이솔</p>
-                        <footer class="blockquote-footer"> 조원 ∙ 낭만고양이 ( feat. 체리필터 )</footer>
+                        <footer class="blockquote-footer"> 조원 ∙ 귀여운 고양이와 동거동락 중! (feat. 오레오)</footer>
                     </blockquote>
                 </div>
             </div>
