정규 그림 추가

--- a/templates/index_list.html
+++ b/templates/index_list.html
@@ -148,10 +148,10 @@
                     <blockquote class="blockquote mb-0">
                         <button type="button" onclick="window.location.href='/index_김정규.html'"
                             class="btn btn-light">▶️</button>
-                        <img src="../static/images/Jack.png" class="user-icon">
+                        <img src="../static/images/SongnisanMountain_Munjangdae.jpeg" class="user-icon">
                         <!-- 이미지1:1 비율로 올리기 -->
                         <p>김정규</p>
-                        <footer class="blockquote-footer"> 조원 ∙ 닥치고 스쿼트</footer>
+                        <footer class="blockquote-footer"> 조원 ∙ 힘들더라도 근면 성실하게 코딩하자~!</footer>
                     </blockquote>
                 </div>
             </div>
